# python-libraclient

./: .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README  openstack-common.conf  requirements.txt  setup.cfg  setup.py  tox.ini
debian/: changelog  control  copyright
doc/: command.rst  conf.py  examples.rst  index.rst  installation.rst  introduction.rst
libraclient/: .clientoptions.py.swp  __init__.py  client.py  clientoptions.py  libraapi.py  shell.py  utils.py
libraclient/openstack/common/: cliutils.py  gettextutils.py  strutils.py
libraclient/openstack/common/apiclient/: auth.py  auth_keystone.py  base.py  client.py  exceptions.py  fake_client.py  keystone.py
libraclient/openstack/common/apiclient/auth/: response.py
libraclient/openstack/common/py3kcompat/: __init__.py  urlutils.py
libraclient/v1_1/: algorithms.py  base.py  client.py  limits.py  loadbalancer.py  protocols.py  shell.py
tests/: test_lbaas_client.py
tools/: pip-requires  test-requires
