[metadata]
name = python-libraclient
summary = Client library for Libra LBaaS tools
description-file =
    README.rst
license = Apache License, Version 2.0
author = Andrew Hutchings
author-email = andrew@linuxjedi.co.uk
home-page = https://launchpad.net/libra
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python


[files]
packages =
    libraclient

[entry_points]
console_scripts =
    libra_client = libraclient.client:main

[build_sphinx]
source-dir = doc
build-dir = build/sphinx
all_files = 1

[upload_sphinx]
upload-dir = build/sphinx/html
