[metadata]
name = python-libraclient
summary = Client library for Libra LBaaS tools
description-file =
    README.rst
license = Apache License, Version 2.0
author = Andrew Hutchings
author-email = andrew@linuxjedi.co.uk
home-page = https://launchpad.net/libra
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python


[files]
packages =
    libraclient

[entry_points]
console_scripts =
    libra_client = libraclient.shell:main

libraclient.versions =
    1.1 = libraclient.v1_1.client:Client

libraclient.extension =
    1.1 = libraclient.v1_1.client:Client

openstack.common.apiclient.auth =
    keystone = libraclient.openstack.common.apiclient.auth_keystone:KeystoneV2AuthPlugin

[build_sphinx]
source-dir = doc
build-dir = build/sphinx
all_files = 1

[upload_sphinx]
upload-dir = build/sphinx/html
